general: update docs
